<resources>
    <string name="app_name">Password Generator</string>
    <!-- <string name="title_activity_random_number_generator">randomNumberGenerator</string> -->
    <string name="generatePassword">Create Password</string>
    <string name="Password_Length">Password Length: </string>
    <string name="Capital_Letters">Capital Letters (default)</string>
    <string name="Numbers">Numbers</string>
    <string name="Symbols">Symbols</string>
    <string name="Include">Include:</string>
    <string name="Lowercase_Letters">Lowercase Letters</string>
    <string name="Large_Text">Large Text</string>
    <string name="action_settings">Settings</string>
</resources>
